--- a/app/views/chatrooms/new.html.erb
+++ b/app/views/chatrooms/new.html.erb
@@ -1,3 +1,5 @@
-<%= render 'forms' %>
+<div class="container" style="padding-top: 40px;">
+<%= render 'form' %>
 
 <%= link_to "Back", chatrooms_path, class: "btn btn-primary" %>
+</div>
