--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for @message do |f| %>
+<%= form_for @message do |f| %>
 	<div class="row">
 		<div class="col-md-6 center">
 			<%= f.label :content %>
