destroyed chat_room model created chatroom model. Not yet migrated

--- a/app/views/chatrooms/_form.html.erb
+++ b/app/views/chatrooms/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :chatroom do |f| %>
+<%= form_for @chatroom do |f| %>
 	<div class="row">
 		<div class="col-md-8 center">
 			<%= f.label :topic %>
