--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,5 +1,5 @@
 <% @chatrooms.each do |cr| %>
-	<%= cr.content %>
+	<%= cr.topic %>
 <% end %>
 
 <%= link_to "back", chatrooms_path, class: "btn btn-primary" %>
