--- a/app/views/chatrooms/_form.html.erb
+++ b/app/views/chatrooms/_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_for @chatroom do |f| %>
-	<div class="row">
-		<div class="col-md-8 center">
+	<div class="row col-md-8">
+		<div class="form-group">
 			<%= f.label :topic %>
 			<%= f.text_field :topic %>
 		</div>
-		<div class="col-md-8 center">
-			<%= f.submit class: "btn btn-success" %>
-		</div>
+	</div>
+	<div class="col-md-8 center">
+		<%= f.submit "Create", class: "btn btn-success" %>
 	</div>
 <% end %>
 <div class="clearfix"></div><br>
