--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,15 +1,15 @@
-<div class="row col-md-8 col-md-offset-2">
- <h1><%= @chatroom.topic %></h1>
+<h1><%= @chatroom.topic %></h1>
 
-<div class="panel panel-default">
- <% if @chatroom.messages.any? %>
- 	<div class="panel-body" id="messages">
- 		<%= render partial: 'messages/message', collection: @chatroom.messages%>
- 	</div>
- <% else %>
- 	<div class="panel-body hidden" id="messages"></div>
- <% end %>
- </div>
-
- 		<%= render partial: 'messages/message_form', locals: {message: @message, chatroom: @chatroom} %>
+<div id="messages" data-chatroom-id="<%= @chatroom.id %>">
+  <%= render partial: 'messages/message', collection: @chat_room.messages %>
 </div>
+
+<%= form_for @message, url: '#' do |f| %>
+  <div class="form-group">
+    <%= f.label :message %>
+    <%= f.text_area :content, class: 'form-control' %>
+    <small class="text-muted">From 2 to 1000 characters</small>
+  </div>
+
+  <%= f.submit "Post", class: 'btn btn-primary btn-lg' %>
+<% end %>
