--- a/app/views/messages/_message_form.html.erb
+++ b/app/views/messages/_message_form.html.erb
@@ -1,7 +1,9 @@
 <%= form_for message, remote: true, authenticity_token: true do |f| %>
-	<%= f.label :your_message %>
-	<%= f.text_area :content, class: "form-control", data: {text_area: "message"} %>
-
+	 <div class="form-group">
+		<%= f.label :your_message %>
+		<%= f.text_area :content, class: "form-control", data: {text_area: "message"} %>
+		<small class="text-muted">From 2 to 1000 characters</small>
+  	</div>
 	<%= f.hidden_field :chatroom_id, value: chatroom.id %>
-	<%= f.submit "send", class: "btn btn-primary", style: "display: none", data: {send: "message"} %>
+	<%= f.submit "send", class: "btn btn-primary btn-lg"%>
 <% end %>
