sitepoint actioncable version

--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -11,5 +11,5 @@
     <small class="text-muted">From 2 to 1000 characters</small>
   </div>
 
-  <%= f.submit "Post", class: 'btn btn-primary btn-lg' %>
+  <%= f.submit class: 'btn btn-primary btn-lg' %>
 <% end %>
