--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -7,7 +7,7 @@
       <div class="col-md-11">
         <p class="card-text">
           <span class="text-muted"><%= message.user.username %> at <%= message.timestamp %> says</span><br>
-          <%= message.body %>
+          <%= message.content %>
         </p>
       </div>
     </div>
