--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,4 +1,9 @@
-<p class="lead"><%= link_to 'New Chat Room', new_chatroom_path, class: 'btn btn-primary' %></p>
+<p class="lead"><%= link_to 'New Chat Room', new_chatroom_path, class: 'btn btn-primary' %> | 
+<% if user_signed_in? %>
+  <li>
+  <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+<% end %>
+</p>
 <% @chatrooms.each do |cr| %>
 	<p><%= cr.topic %></p>
 	<li><%= link_to "Enter #{cr.topic}", chatroom_path(cr) %></li>
