wooorking, messages broadcast

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,20 @@
     <%= f.email_field :email %>
   </div>
  
+ <div class="field">
+  <%= f.label "first name" %><br />
+  <%= f.text_field :first_name %>
+ </div>
+
+ <div class="field">
+  <%= f.label "second name" %><br />
+  <%= f.text_field :second_name %>
+ </div>
+
+ <div class="field">
+  <%= f.label "unique username" %><br />
+  <%= f.text_field :username %>
+</div>
 
   <div class="field">
     <%= f.label :password %>
