--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,14 +1,18 @@
-<div class="row">
-<div class="col-md-2"><h1><%= @chatroom.topic %></h1></div>
-<div class="col-md-8">
-<% if user_signed_in? %>
-  <li>
-  <p class="pull_right"><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-danger" %>  </p> 
-<% end %>
+<div class="row col-md-8 col-md-offset-2">
+  <h1><%= @chatroom.topic %></h1>
+  <% if user_signed_in? %>
+   <p class="pull_right"><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-danger" %>  </p> 
+  <% end %>
+<div class="panel panel-default">
+  <% if @chatroom.messages.any? %>
+    <div class="panel-body" id="messages" data-chatroom=<%= @chatroom.id %>>
+      <%= render partial: 'messages/message', collection: @chatroom.messages%>
+    </div>
+  <%else%>
+    <div class="panel-body hidden" id="messages">
+    </div>
+  <%end%>
 </div>
 
-<div id="messages" data-chatroom-id="<%= @chatroom.id %>">
-  <%= render partial: 'messages/message', collection: @chatroom.messages %>
+  <%= render partial: 'messages/message_form', locals: {message: @message, chatroom: @chatroom}%>
 </div>
-<%= render partial: 'messages/message_form', locals: {message: @message, chatroom: @chatroom} %>
-
