--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -36,8 +36,9 @@
 				</div><!-- /.navbar-collapse -->
 				 
 			</nav>
-			<div class="clearfix"></div>
+
 		<!-- //navigation -->
 			</div>
 		</header>
+			<div class="clearfix" style="height: 100px;"></div>
 	<!-- //header -->
