--- a/app/views/home/gallery.html.erb
+++ b/app/views/home/gallery.html.erb
@@ -8,10 +8,10 @@
 				<div class="col-md-6 gallery-grids glry-grid1">
 					<div class="gallery-grids-top">
 						<a href="#portfolioModal1" class="b-link-stripe b-animate-go wow zoomIn animated" data-wow-delay=".5s" data-toggle="modal">
-							<img src="images/gg1.jpg" class="img-responsive" alt=""/>
+							<%= image_tag("gg1", :class => "img-responsive") %>
 							<div class="b-wrapper">
 								<span class="b-animate b-from-left">
-									<img class="img-responsive" src="images/search.png" alt=""/>
+									<%= image_tag("search", class: "img-responsive") %>
 								</span>					
 							</div>
 						</a>
@@ -19,20 +19,20 @@
 					<div class="gallery-grids-top">
 						<div class="col-md-6 bottom-grids">
 							<a href="#portfolioModal2" class="b-link-stripe b-animate-go wow zoomIn animated" data-wow-delay=".5s" data-toggle="modal">
-								<img src="images/gg2.jpg" class="img-responsive" alt=""/>
+								<%= image_tag("gg2", :class => "img-responsive") %>
 								<div class="b-wrapper">
 									<span class="b-animate b-from-left">
-										<img class="img-responsive" src="images/search.png" alt=""/>
+										<%= image_tag("search") %>
 									</span>					
 								</div>
 							</a>
 						</div>
 						<div class="col-md-6 bottom-grids ">
 							<a href="#portfolioModal3" class="b-link-stripe b-animate-go wow zoomIn animated" data-wow-delay=".5s" data-toggle="modal">
-								<img src="images/gg3.jpg" class="img-responsive" alt=""/>
+								<%= image_tag("gg3", :class => "img-responsive") %>
 								<div class="b-wrapper">
 									<span class="b-animate b-from-left">
-										<img class="img-responsive" src="images/search.png" alt=""/>
+										<%= image_tag("search", :class => "img-responsive") %>
 									</span>					
 								</div>
 							</a>
@@ -44,20 +44,18 @@
 					<div class="gallery-grids-top">
 						<div class="col-md-6 bottom-grids2 ">
 							<a href="#portfolioModal4" class="b-link-stripe b-animate-go wow zoomIn animated" data-wow-delay=".5s" data-toggle="modal">
-								<img src="images/gg4.jpg" class="img-responsive" alt=""/>
-								<div class="b-wrapper">
+								<%= image_tag("gg4", :class => "img-responsive") %>
 									<span class="b-animate b-from-left">
-										<img class="img-responsive" src="images/search.png" alt=""/>
+										<%= image_tag("search", :class => "img-responsive") %>
 									</span>					
 								</div>
 							</a>
 						</div>
 						<div class="col-md-6 bottom-grids2 ">
 							<a href="#portfolioModal5" class="b-link-stripe b-animate-go wow zoomIn animated" data-wow-delay=".5s" data-toggle="modal">
-								<img src="images/gg5.jpg" class="img-responsive" alt=""/>
-								<div class="b-wrapper">
+								<%= image_tag("gg5", :class => "img-responsive") %>
 									<span class="b-animate b-from-left">
-										<img class="img-responsive" src="images/search.png" alt=""/>
+										<%= image_tag("search", :class => "img-responsive") %>
 									</span>					
 								</div>
 							</a>
@@ -66,10 +64,8 @@
 					</div>
 					<div class="gallery-grids-top ">
 						<a href="#portfolioModal6" class="b-link-stripe b-animate-go wow zoomIn animated" data-wow-delay=".5s" data-toggle="modal">
-							<img src="images/gg6.jpg" class="img-responsive" alt=""/>
-							<div class="b-wrapper">
 								<span class="b-animate b-from-left">
-									<img class="img-responsive" src="images/search.png" alt=""/>
+										<%= image_tag("search", :class => "img-responsive") %>
 								</span>					
 							</div>
 						</a>
@@ -90,8 +86,8 @@
 									<div class="modal-body">
 										<h3>Our Gallery</h3>
 										<hr>
-										<img src="images/gg1.jpg" class="img-responsive img-centered" alt="">
-										<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<%= image_tag("gg1", :class => "img-responsive") %> 
+											Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 									</div>
 								</div>
 							</div>
@@ -111,8 +107,7 @@
 									<div class="modal-body">
 										<h3>Our Gallery</h3>
 										<hr>
-										<img src="images/gg2.jpg" class="img-responsive img-centered" alt="">
-										<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<%= image_tag("gg2", :class => "img-responsive") %> Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 									</div>
 								</div>
 							</div>
@@ -132,8 +127,7 @@
 									<div class="modal-body">
 										<h3>Our Gallery</h3>
 										<hr>
-										<img src="images/gg3.jpg" class="img-responsive img-centered" alt="">
-										<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<%= image_tag("gg3", :class => "img-responsive") %> Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 									</div>
 								</div>
 							</div>
@@ -153,8 +147,7 @@
 									<div class="modal-body">
 										<h3>Our Gallery</h3>
 										<hr>
-										<img src="images/gg4.jpg" class="img-responsive img-centered" alt="">
-										<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<%= image_tag("gg4", :class => "img-responsive:") %> Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 									</div>
 								</div>
 							</div>
@@ -174,8 +167,7 @@
 									<div class="modal-body">
 										<h3>Our Gallery</h3>
 										<hr>
-										<img src="images/gg5.jpg" class="img-responsive img-centered" alt="">
-										<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<%= image_tag("gg5", :class => "img-responsive") %> Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 									</div>
 								</div>
 							</div>
@@ -195,8 +187,7 @@
 									<div class="modal-body">
 										<h3>Our Gallery</h3>
 										<hr>
-										<img src="images/gg6.jpg" class="img-responsive img-centered" alt="">
-										<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<%= image_tag("gg6", :class => "img-responsive") %> Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 									</div>
 								</div>
 							</div>
